# rekordbox_history_parser

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
data/: history.txt  recording.cue
notebooks/: working_notebook.ipynb
src/rekordbox_history_parser/: cli.py  constants.py  helpers.py  main.py
tests/: test_helpers.py
tests/data/: history_error.txt  history_ok.txt  recording_ok.cue
