[tool.poetry]
name = "rekordbox-history-parser"
version = "0.0.1"
description = "Parser for rekordbox history .txt and recording .cue files."
authors = ["thevoiddancer <tomislav.nazifovic@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "rekordbox_history_parser", from="src"}]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
